--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width">
     <title>Espaço Mulher</title>
     <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -12,9 +12,6 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container justify-content-sm-between">
             <img src="img/logo.jpeg" class="rounded-circle" alt="Logo espaço mulher">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
             <div class="nav justify-content-sm-around">
                 <li class="nav-item">
                   <a class="nav-link" href="index.html">Início</a>
