--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                   <a class="nav-link" href="index.html">Início</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Cursos</a>
+                  <a class="nav-link" href="cursos.html">Cursos</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="contatos.html">Contatos</a>
