Pequenas Alterações feitas para ter responsividade

--- a/contatos.html
+++ b/contatos.html
@@ -29,7 +29,7 @@
     <main>
         <div class="container-texto">
             <h2 class="container-titulo">Contatos</h2>
-            <li><a href="#">Facebook</a></li>
+            <li><a href="https://www.facebook.com/groups/2245177665756315" target="_blank">Facebook</a></li>
             <li><a>Email: e.mulherslz@gmail.com</a></li>
         </div>
     </main>
