--- a/cursos.html
+++ b/cursos.html
@@ -40,7 +40,7 @@
                     <div class="accordion-body">
                         <div class="container-card">
                             <div class="card" style="width: 18rem;">
-                                <img src="/img/unhas decoradas.png" class="card-img-top" alt="imagem-unhas">
+                                <img src="/conecta-espaco-mulher/img/unhas decoradas.png" class="card-img-top" alt="imagem-unhas">
                                 <div class="card-body">
                                 <h5 class="card-title">Designer de unhas:</h5>
                                 <p class="card-text">O trabalho de Neil Designer tem crescido muito nos últimos
@@ -65,7 +65,7 @@
                     <div class="accordion-body">
                         <div class="container-card">
                             <div class="card" style="width: 18rem;">
-                                <img src="/img/sobrancelhas perfeitas.png" class="card-img-top" alt="imagem-unhas">
+                                <img src="/conecta-espaco-mulher/img/sobrancelhas perfeitas.png" class="card-img-top" alt="imagem-unhas">
                                 <div class="card-body">
                                 <h5 class="card-title">Sobrancelhas Perfeitas:</h5>
                                 <p class="card-text">Se você está pensando em uma carreira para seguir ou
@@ -91,7 +91,7 @@
                     <div class="accordion-body">
                         <div class="container-card">
                             <div class="card" style="width: 18rem;">
-                                <img src="/img/colometria.png" class="card-img-top" alt="imagem-unhas">
+                                <img src="/conecta-espaco-mulher/img/colometria.png" class="card-img-top" alt="imagem-unhas">
                                 <div class="card-body">
                                 <h5 class="card-title">Destrava Color:</h5>
                                 <p class="card-text">É um tipo de maquiagem utilizada para corrigir as falhas da
@@ -110,14 +110,14 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingFour">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                        Alongamento de cílios:
+                        Alongamento de cílios
                     </button>
                   </h2>
                   <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <div class="container-card">
                             <div class="card" style="width: 18rem;">
-                                <img src="/img/cílios.png" class="card-img-top" alt="imagem-unhas">
+                                <img src="/conecta-espaco-mulher/img/cílios.png" class="card-img-top" alt="imagem-unhas">
                                 <div class="card-body">
                                 <h5 class="card-title">Alongamento de cílios:</h5>
                                 <p class="card-text">A técnica de alongamento de cílios chegou no ramo da
@@ -134,17 +134,17 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingFive">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                        Limpeza de Pele:
+                        Limpeza de Pele
                     </button>
                   </h2>
                   <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <div class="container-card">
                             <div class="card" style="width: 18rem;">
-                                <img src="/img/limpeza de pele.png" class="card-img-top" alt="imagem-unhas">
+                                <img src="/conecta-espaco-mulher/img/limpeza de pele.png" class="card-img-top" alt="imagem-unhas">
                                 <div class="card-body">
                                 <h5 class="card-title">Limpeza de Pele:</h5>
-                                <p class="card-text">: É o procedimento mais procurado pelas mulheres em clínicas de
+                                <p class="card-text">É o procedimento mais procurado pelas mulheres em clínicas de
                                     estética. Este tem o objetivo de remover os cravos e as impurezas da pele, logo, ela
                                     proporciona uma série de benefícios como renovação celular, com aspecto de pele
                                     mais lisa e saudável, além da redução dos poros.</p>
@@ -158,14 +158,14 @@
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingSix">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                        Depilação com Cera:
+                        Depilação com Cera
                     </button>
                   </h2>
                   <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <div class="container-card">
                             <div class="card" style="width: 18rem;">
-                                <img src="/img/depilação - cera.png" class="card-img-top" alt="imagem-unhas">
+                                <img src="/conecta-espaco-mulher/img/depilação - cera.png" class="card-img-top" alt="imagem-unhas">
                                 <div class="card-body">
                                 <h5 class="card-title">Depilação com Cera:</h5>
                                 <p class="card-text">é uma técnica que possibilita a remoção de pêlos, hoje em dia há uma
@@ -181,7 +181,7 @@
             </div>
         </article>
     </main>
-    <script src="/bootstrap/js/bootstrap.min.js"></script>
+    <script src="bootstrap/js/bootstrap.min.js"></script>
     <footer class="container-fluid text-center bg-footer margin">
     </footer>
 </body>
