mudança na imagem

--- a/cursos.html
+++ b/cursos.html
@@ -40,7 +40,7 @@
                     <div class="accordion-body">
                         <div class="container-card">
                             <div class="card" style="width: 18rem;">
-                                <img src="/conecta-espaco-mulher/img/unhas decoradas.png" class="card-img-top" alt="imagem-unhas">
+                                <img src="/img/unhas decoradas.png" class="card-img-top" alt="imagem-unhas">
                                 <div class="card-body">
                                 <h5 class="card-title">Designer de unhas:</h5>
                                 <p class="card-text">O trabalho de Neil Designer tem crescido muito nos últimos
