--- a/cursos.html
+++ b/cursos.html
@@ -65,7 +65,7 @@
                     <div class="accordion-body">
                         <div class="container-card">
                             <div class="card" style="width: 18rem;">
-                                <img src="/conecta-espaco-mulher/img/sobrancelhas perfeitas.png" class="card-img-top" alt="imagem-unhas">
+                                <img src="/img/sobrancelhas perfeitas.png" class="card-img-top" alt="imagem-unhas">
                                 <div class="card-body">
                                 <h5 class="card-title">Sobrancelhas Perfeitas:</h5>
                                 <p class="card-text">Se você está pensando em uma carreira para seguir ou
@@ -91,7 +91,7 @@
                     <div class="accordion-body">
                         <div class="container-card">
                             <div class="card" style="width: 18rem;">
-                                <img src="/conecta-espaco-mulher/img/colometria.png" class="card-img-top" alt="imagem-unhas">
+                                <img src="/img/colometria.png" class="card-img-top" alt="imagem-unhas">
                                 <div class="card-body">
                                 <h5 class="card-title">Destrava Color:</h5>
                                 <p class="card-text">É um tipo de maquiagem utilizada para corrigir as falhas da
@@ -117,7 +117,7 @@
                     <div class="accordion-body">
                         <div class="container-card">
                             <div class="card" style="width: 18rem;">
-                                <img src="/conecta-espaco-mulher/img/cílios.png" class="card-img-top" alt="imagem-unhas">
+                                <img src="/img/cílios.png" class="card-img-top" alt="imagem-unhas">
                                 <div class="card-body">
                                 <h5 class="card-title">Alongamento de cílios:</h5>
                                 <p class="card-text">A técnica de alongamento de cílios chegou no ramo da
@@ -141,7 +141,7 @@
                     <div class="accordion-body">
                         <div class="container-card">
                             <div class="card" style="width: 18rem;">
-                                <img src="/conecta-espaco-mulher/img/limpeza de pele.png" class="card-img-top" alt="imagem-unhas">
+                                <img src="/img/limpeza de pele.png" class="card-img-top" alt="imagem-unhas">
                                 <div class="card-body">
                                 <h5 class="card-title">Limpeza de Pele:</h5>
                                 <p class="card-text">É o procedimento mais procurado pelas mulheres em clínicas de
@@ -165,7 +165,7 @@
                     <div class="accordion-body">
                         <div class="container-card">
                             <div class="card" style="width: 18rem;">
-                                <img src="/conecta-espaco-mulher/img/depilação - cera.png" class="card-img-top" alt="imagem-unhas">
+                                <img src="/img/depilação - cera.png" class="card-img-top" alt="imagem-unhas">
                                 <div class="card-body">
                                 <h5 class="card-title">Depilação com Cera:</h5>
                                 <p class="card-text">é uma técnica que possibilita a remoção de pêlos, hoje em dia há uma
