Alterações nas Descrições

--- a/cursos.html
+++ b/cursos.html
@@ -68,12 +68,7 @@
                                 <img src="/img/sobrancelhas perfeitas.png" class="card-img-top" alt="imagem-unhas">
                                 <div class="card-body">
                                 <h5 class="card-title">Sobrancelhas Perfeitas:</h5>
-                                <p class="card-text">Se você está pensando em uma carreira para seguir ou
-                                    gerar uma renda extra considere ser uma designer de sobrancelhas, com a carreira
-                                    em alta, com certeza há vagas no mercado. O designer de sobrancelhas tem a função
-                                    de desenhar a sobrancelha de forma que harmonize perfeitamente com o formato do
-                                    rosto. Para se qualificar como designer é necessário fazer um curso e colocar seus
-                                    conhecimentos em prática.</p>
+                                <p class="card-text">O designer de sobrancelhas tem a função de desenhar a sobrancelha de forma que harmonize perfeitamente com o formato do rosto. Se você está pensando em uma carreira para seguir ou gerar uma renda extra considere ser uma designer de sobrancelhas, com a carreira em alta, com certeza há vagas no mercado. Para se qualificar como designer é necessário fazer um curso e colocar seus conhecimentos em prática.</p>
                                 <a href="https://bit.ly/sp_perfeitas?fbclid=IwAR3T9sl2VD_Yxgsdm2f8hyxDnXaoTbEtL1Y_EuylXpaETfc8_3DG6W6VTtQ" class="btn btn-primary" target="_blank">Adquira já</a>
                                 </div>
                             </div>
@@ -94,12 +89,7 @@
                                 <img src="/img/colometria.png" class="card-img-top" alt="imagem-unhas">
                                 <div class="card-body">
                                 <h5 class="card-title">Destrava Color:</h5>
-                                <p class="card-text">É um tipo de maquiagem utilizada para corrigir as falhas da
-                                    sobrancelha, ou seja, é uma técnica de preenchimento. Aprender a misturas de cores
-                                    o que é tom quente e tom frio, o por que a henna fica verde ou marrom e como
-                                    resolver o problema, como neutralizar uma cor, como preparar e aplicar corretamente
-                                    uma henna e a textura, como melhorar a fixação de sua henna e o cuidado pós
-                                    henna.</p>
+                                <p class="card-text">É um tipo de maquiagem utilizada para corrigir as falhas das sobrancelhas, ou seja, é uma técnica de preenchimento. Destrava Color te ensina como misturar as cores e a neutralizar, toda preparação para aplicar corretamente e a textura, e o por que a henna fica verde ou marrom e como resolver o problema,  como melhorar a fixação e o cuidado pós henna.</p>
                                 <a href="https://bit.ly/mdestravacolor" class="btn btn-primary" target="_blank">Adquira já</a>
                                 </div>
                             </div>
