--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <main>
         <div class="container-texto">
             <h2 class="container-titulo">O que você encontrará</h2>
-            <p class="container-descricao">Neste espaço tem como objetivo indicar cursos que possam transformar a vida de pessoas e potencializar sua renda.
-                Todos os cursos indicados oferecem garantia de 7 (sete) dias do consumidor caso você não tenha se identificado.
-                Os profissionais são renomados na área, e o valor de compra é único, ou seja, você não terá compromisso com parcelas. Todos os cursos são 100% online e gravadas, você poderá assistir de acordo com sua disponibilidade, material incluso e certificado.  
-                Todos os cursos indicados são voltados para estética e beleza, são 6 (seis) cursos, seja para você profissional da área ou para você que deseja ampliar seus conhecimentos. Temos certeza que tem um curso feito pra você.</p>
+            <p class="container-descricao">Nesse espaço tem como objetivo indicar cursos que possam transformar a vida de pessoas e potencializar sua renda.
+               Os profissionais são renomados na área e as aulas são 100% online e gravadas, ou seja, você poderá assistir de acordo com sua disponibilidade com material incluso e certificado.
+                São 6 (seis) cursos voltados para a área da estética e beleza, seja para você profissional da área ou para quem deseja ampliar seus conhecimentos.
+                 Todos os cursos indicados são valores únicos e oferecem  garantia de 7 (sete) dias para cancelamento caso você não tenha se identificado. Conheça as opções de cursos, temos certeza que tem um feito pra você.</p>
         </div>
     </main>
     <footer class="container-fluid text-center bg-footer margin">
