Alterações de responsividade

--- a/cursos.html
+++ b/cursos.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container justify-content-sm-between">
-            <img src="img/logo.jpeg" class="rounded-circle" alt="Logo espaço mulher">
+            <img src="img/logo_2.jpeg" class="rounded-circle" alt="Logo espaço mulher">
             <div class="nav justify-content-sm-around">
                 <li class="nav-item">
                   <a class="nav-link" href="index.html">Início</a>
@@ -43,11 +43,8 @@
                                 <img src="/img/unhas decoradas.png" class="card-img-top" alt="imagem-unhas">
                                 <div class="card-body">
                                 <h5 class="card-title">Designer de unhas:</h5>
-                                <p class="card-text">O trabalho de Neil Designer tem crescido muito nos últimos
-                                    anos e tem se tornado um meio muito lucrativo, ganhando mais adeptos e
-                                    profissionais capacitados para o trabalho. Especializado em formatos, alongamentos
-                                    e decorações diferentes, o mercado de designer de unhas no Brasil está em alta, logo
-                                    esse mercado se tornou bastante lucrativo.</p>
+                                <p class="card-text">O trabalho da Designer de Unhas tem crescido muito nos últimos anos, logo tem se tornado um meio muito lucrativo, assim ganhando mais adeptos e profissionais capacitados para o trabalho.
+                                   Especializado em formatos, decorações e alongamentos, a designer de unhas cuida da estética visual podendo ser verdadeiras obras de arte em movimento.</p>
                                 <a href="https://bit.ly/designer-curso-unhas" class="btn btn-primary" target="_blank">Adquira já</a>
                                 </div>
                             </div>
@@ -86,7 +83,7 @@
                     <div class="accordion-body">
                         <div class="container-card">
                             <div class="card" style="width: 18rem;">
-                                <img src="/img/colometria.png" class="card-img-top" alt="imagem-unhas">
+                                <img src="/img/colometria.jpeg" class="card-img-top" alt="imagem-unhas">
                                 <div class="card-body">
                                 <h5 class="card-title">Destrava Color:</h5>
                                 <p class="card-text">É um tipo de maquiagem utilizada para corrigir as falhas das sobrancelhas, ou seja, é uma técnica de preenchimento. Destrava Color te ensina como misturar as cores e a neutralizar, toda preparação para aplicar corretamente e a textura, e o por que a henna fica verde ou marrom e como resolver o problema,  como melhorar a fixação e o cuidado pós henna.</p>
@@ -131,7 +128,7 @@
                     <div class="accordion-body">
                         <div class="container-card">
                             <div class="card" style="width: 18rem;">
-                                <img src="/img/limpeza de pele.png" class="card-img-top" alt="imagem-unhas">
+                                <img src="/img/limpeza de pele.jpeg" class="card-img-top" alt="imagem-unhas">
                                 <div class="card-body">
                                 <h5 class="card-title">Limpeza de Pele:</h5>
                                 <p class="card-text">É o procedimento mais procurado pelas mulheres em clínicas de
@@ -155,7 +152,7 @@
                     <div class="accordion-body">
                         <div class="container-card">
                             <div class="card" style="width: 18rem;">
-                                <img src="/img/depilação - cera.png" class="card-img-top" alt="imagem-unhas">
+                                <img src="/img/depilação - cera.jpeg" class="card-img-top" alt="imagem-unhas">
                                 <div class="card-body">
                                 <h5 class="card-title">Depilação com Cera:</h5>
                                 <p class="card-text">é uma técnica que possibilita a remoção de pêlos, hoje em dia há uma
