--- a/contatos.html
+++ b/contatos.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container justify-content-sm-between">
-            <img src="img/logo.jpeg" class="rounded-circle" alt="Logo espaço mulher">
+            <img src="img/logo_2.jpeg" class="rounded-circle" alt="Logo espaço mulher">
             <div class="nav justify-content-sm-around">
                 <li class="nav-item">
                   <a class="nav-link" href="index.html">Início</a>
