--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         <div class="container-texto">
             <h2 class="container-titulo">O que você encontrará</h2>
             <p class="container-descricao">Nesse espaço tem como objetivo indicar cursos que possam transformar a vida de pessoas e potencializar sua renda.
-               Os profissionais são renomados na área e as aulas são 100% online e gravadas, ou seja, você poderá assistir de acordo com sua disponibilidade com material incluso e certificado.
-                São 6 (seis) cursos voltados para a área da estética e beleza, seja para você profissional da área ou para quem deseja ampliar seus conhecimentos.
-                 Todos os cursos indicados são valores únicos e oferecem  garantia de 7 (sete) dias para cancelamento caso você não tenha se identificado. Conheça as opções de cursos, temos certeza que tem um feito pra você.</p>
+                Os profissionais são renomados na área e as aulas são 100% online e gravadas, ou seja, você poderá assistir de acordo com sua disponibilidade com material incluso e certificado.
+                São 6 (seis) cursos voltados para a área da estética e beleza, seja para você profissional da área ou para quem deseja ampliar seus conhecimentos. Todos os cursos indicados são da Plataforma HOTMART com valores únicos e oferecem  garantia de 7 (sete) dias para cancelamento caso você não tenha se identificado.
+                Conheça as opções de cursos, temos certeza que tem um feito pra você.</p>
         </div>
     </main>
     <footer class="container-fluid text-center bg-footer margin">
